Change to PermGen option.  Set PermGen directly instead of MaxPermGen.